fix start now link

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             sports therapy. Unleash your inner
             athlete and reach new heights with us.
           </p>
-          <a href="html/classes.html"
+          <a href="./html/classes.html"
             class="btn btn-main">Start
             Now</a>
         </div>
