change home and contact links to absolute

--- a/html/contact.html
+++ b/html/contact.html
@@ -270,11 +270,11 @@
                   2666 0000</a></li>
             </ul>
             <div class="button-group">
-              <a href="../html/clubs.html"
+              <a href="/html/clubs.html"
                 class="btn btn-main find-club arrow-right">Find
                 Your
                 Club</a>
-              <a href="../html/classes.html"
+              <a href="/html/classes.html"
                 class="btn btn-main find-classes arrow-right">Find
                 Our
                 Classes</a>
