change back to relative links

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="grid-4col">
         </div>
         <div class="flex-center"> <a
-            href="/html/classes.html"
+            href="./html/classes.html"
             class="btn btn-main">
             All Classes
           </a></div>
