add filter label

--- a/html/classes.html
+++ b/html/classes.html
@@ -32,9 +32,13 @@
     </section>
     <section id="all-class-list">
       <div class="container">
-        <select name="classes-filter"
-          id="classes-filter">
-        </select>
+        <div class="filter-group">
+          <label for="classes-filter"
+            class="ff-icon filter"></label>
+          <select name="classes-filter"
+            id="classes-filter">
+          </select>
+        </div>
         <div class="grid-4col">
         </div>
       </div>
