change home links

--- a/html/class.html
+++ b/html/class.html
@@ -56,10 +56,10 @@
         <div id="class-timetable">
 
           <h5>Timetable</h5>
-          <div class="filter-group">
+          <div class="filter-group-v">
             <label
               for="class-timetable-search-club"
-              class="ff-icon search"></label>
+              class="search">Search</label>
             <input type="text"
               name="class-timetable-search-club"
               id="class-timetable-search-club"
