--- a/html/classes.html
+++ b/html/classes.html
@@ -32,9 +32,9 @@
     </section>
     <section id="all-class-list">
       <div class="container">
-        <div class="filter-group">
+        <div class="filter-group-v">
           <label for="classes-filter"
-            class="ff-icon filter"></label>
+            class="filter">Filter</label>
           <select name="classes-filter"
             id="classes-filter">
           </select>
