--- a/html/club.html
+++ b/html/club.html
@@ -115,19 +115,19 @@
         <h2 class="section-title">Timetable
         </h2>
         <div class="grid-2col">
-          <div class="filter-group">
+          <div class="filter-group-v-100">
             <label
               for="club-timetable-classes-filter-dropdown"
-              class="ff-icon filter"></label>
+              class="filter">Filter</label>
             <select
               name="club-timetable-classes-filter-dropdown"
               id="club-timetable-classes-filter-dropdown">
             </select>
           </div>
-          <div class="filter-group">
+          <div class="filter-group-v-100">
             <label
               for="club-timetable-search-class"
-              class="ff-icon search"></label>
+              class="search">Search</label>
             <input type="text"
               name="club-timetable-search-class"
               id="club-timetable-search-class"
