--- a/html/clubs.html
+++ b/html/clubs.html
@@ -28,23 +28,23 @@
           Clubs
         </h1>
         <form id="club-search">
+          <label for="search-club">Search Club
+            Location</label>
           <input type="text" name="search-club"
             id="search-club"
             placeholder="enter postcode or suburb">
           <button type="submit"
-            class="btn btn-main search"></button>
+            class="btn btn-submit search"></button>
         </form>
         <div class="viewBtnGroup">
           <a href="#locationList"
             class="btn btn-main">
             <div class="clubLinks"
-              onclick="openView(event,'List View')"
               id="defaultOpen">List View</div>
           </a>
           <a href="#all-clubs-map"
             class="btn btn-main">
-            <div class="clubLinks"
-              onclick="openView(event,'Map View')">
+            <div class="clubLinks">
               Map
               View</div>
           </a>
