--- a/html/contact.html
+++ b/html/contact.html
@@ -38,13 +38,14 @@
       <div class="container">
         <div class="grid-2col">
           <div class="contact-form-section">
-            <h5>Fill out the form below to get in
-              touch.</h5>
+            <p class="font-weight-700">Fill out
+              the form below to get in
+              touch.</p>
             <form id="contact-form"
               class="contact-form" novalidate>
               <div
                 class="form-control club-location">
-                <label for="club-location"
+                <label for="clublocation"
                   class="required">Club
                   Location</label>
                 <!-- <i
@@ -78,7 +79,7 @@
               </div>
               <div
                 class="form-control first-name">
-                <label for="first-name"
+                <label for="firstname"
                   class="required">First
                   Name</label>
                 <div class="ff-wrapper">
@@ -96,7 +97,7 @@
                   aria-live="polite"></div>
               </div>
               <div class="form-control last-name">
-                <label for="last-name"
+                <label for="lastname"
                   class="required">Last
                   Name</label>
                 <!-- <i class="fas fa-user"></i> -->
@@ -115,7 +116,7 @@
               </div>
               <div
                 class="form-control phone-number">
-                <label for="phone-number"
+                <label for="phonenumber"
                   class="required">Phone
                   Number</label>
                 <div class="ff-wrapper">
@@ -155,7 +156,7 @@
               </div>
               <div
                 class="form-control enquiry-type">
-                <label for="enquiry-type"
+                <label for="enquirytype"
                   class="required">Enquiry
                   Type</label>
                 <div class="ff-wrapper">
@@ -172,11 +173,13 @@
                       Lost Property</option>
                     <option
                       value="payment-billing">
-                      Payment And Billing</option>
+                      Payment And Billing
+                    </option>
                     <option
                       value="personal-training">
                       Personal Training</option>
-                    <option value="Others">Others
+                    <option value="Others">
+                      Others
                     </option>
                   </select>
                 </div>
@@ -259,7 +262,7 @@
             </form>
           </div>
           <div class="contact-info">
-            <h3>ML Strength Headquarter</h3>
+            <h2>ML Strength Headquarter</h2>
             <ul class="unstyled">
               <li class="address">Shop 8, 99 Queen
                 St,
