change section to div

--- a/html/clubs.html
+++ b/html/clubs.html
@@ -52,12 +52,12 @@
       </div>
     </div>
     <div class="locations-map-wrapper">
-      <section class="location-list-content">
+      <div class="location-list-content">
         <div class="location-list"
           id="locationList">
         </div>
-      </section>
-      <section id="all-clubs-map"></section>
+      </div>
+      <div id="all-clubs-map"></div>
     </div>
   </main>
 </body>
