change to  semantic

--- a/html/club.html
+++ b/html/club.html
@@ -24,10 +24,10 @@
 
 <body>
   <main id="club-detail">
-    <section id="club-detail-hero"
+    <header id="club-detail-hero"
       class="page-header-banner">
-    </section>
-    <section id="club-contact">
+    </header>
+    <div id="club-contact">
       <div class="container">
         <div class="grid-2col">
           <div class="contact-info">
@@ -72,7 +72,7 @@
         <div class="club-gallery-container">
         </div>
       </div>
-    </section>
+    </div>
     <section id="club-facilities"
       class="bg-redOrange text-white">
       <div class="container">
@@ -149,13 +149,8 @@
           <tbody>
           </tbody>
         </table>
-
-      </div>
-
-
       </div>
     </section>
-
   </main>
 </body>
 
