move header above main

--- a/html/classes.html
+++ b/html/classes.html
@@ -16,21 +16,21 @@
 </head>
 
 <body>
-  <main id="all-classes">
-    <section id="classes-hero"
-      class="page-header-banner">
-      <div class="page-header-banner-container">
-        <img
-          src="../img/classes/bodyattack-q319-lesmills-fia-webassets_cf-dt-ba.jpg"
-          alt=""
-          class="page-header-banner-bg-image">
-        <div
-          class="page-header-banner-content-heading">
-          <h1>Explore All Our Classes</h1>
-        </div>
+  <header id="classes-hero"
+    class="page-header-banner">
+    <div class="page-header-banner-container">
+      <img
+        src="../img/classes/bodyattack-q319-lesmills-fia-webassets_cf-dt-ba.jpg"
+        alt=""
+        class="page-header-banner-bg-image">
+      <div
+        class="page-header-banner-content-heading">
+        <h1>Explore All Our Classes</h1>
       </div>
-    </section>
-    <section id="all-class-list">
+    </div>
+  </header>
+  <main id="all-classes">
+    <div id="all-class-list">
       <div class="container">
         <div class="filter-group-v">
           <label for="classes-filter"
@@ -42,7 +42,7 @@
         <div class="grid-4col">
         </div>
       </div>
-    </section>
+    </div>
   </main>
 </body>
 
