h5 insert aside top

--- a/html/class.html
+++ b/html/class.html
@@ -17,13 +17,12 @@
 </head>
 
 <body>
+  <header id="class-detail-hero"
+    class="page-header-banner">
+  </header>
   <main id="class-detail">
-    <section id="class-detail-hero"
-      class="page-header-banner">
-    </section>
     <div class="class-detailpage-nav-main-grid">
       <aside id="class-detail-side-nav">
-        <h5></h5>
         <ul class="class-detail-side-navlist">
           <li><a href="#class-description">About
               The Class</a></li>
