quote mark pseudo

--- a/html/about.html
+++ b/html/about.html
@@ -16,20 +16,20 @@
 </head>
 
 <body>
-  <main id="about">
-    <section id="about-hero"
-      class="page-header-banner">
-      <div class="page-header-banner-container">
-        <img
-          src="../img/clubs/brisbane-city-ml-strength-1600.jpg"
-          alt=""
-          class="page-header-banner-bg-image">
-        <div
-          class="page-header-banner-content-heading">
-          <h1>About ML Strength</h1>
-        </div>
+  <header id="about-hero"
+    class="page-header-banner">
+    <div class="page-header-banner-container">
+      <img
+        src="../img/clubs/brisbane-city-ml-strength-1600.jpg"
+        alt=""
+        class="page-header-banner-bg-image">
+      <div
+        class="page-header-banner-content-heading">
+        <h1>About ML Strength</h1>
       </div>
-    </section>
+    </div>
+  </header>
+  <main id="about">
     <section id="about-ml">
       <div class="container">
         <div class="grid-2col">
@@ -89,14 +89,8 @@
               knowledge and expertise as a coach,
               by running his boxing classes with
               passion and enthusiasm.</p>
-            <div class="blockquote-card">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                height="1.5em"
-                viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
-                <path
-                  d="M448 296c0 66.3-53.7 120-120 120h-8c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H320c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72zm-256 0c0 66.3-53.7 120-120 120H64c-17.7 0-32-14.3-32-32s14.3-32 32-32h8c30.9 0 56-25.1 56-56v-8H64c-35.3 0-64-28.7-64-64V160c0-35.3 28.7-64 64-64h64c35.3 0 64 28.7 64 64v32 32 72z" />
-              </svg>
+            <div
+              class="blockquote-card quote-right">
               <blockquote class="quote-content">
                 The
                 atmosphere in our boxing classes
