remove checkbox role

--- a/html/contact.html
+++ b/html/contact.html
@@ -16,24 +16,24 @@
 </head>
 
 <body>
-  <main id="contact">
-    <section id="contact-hero"
-      class="page-header-banner">
-      <div class="page-header-banner-container">
-        <img
-          src="../img/classes/bodyattack-q319-lesmills-fia-webassets_cf-dt-ba.jpg"
-          alt=""
-          class="page-header-banner-bg-image">
-        <div
-          class="page-header-banner-content-heading">
-          <h1>Contact Us</h1>
-          <p>Whether you have a question about
-            membership, need help with your
-            workout routine, our team is always
-            happy to chat and offer guidance.</p>
-        </div>
+  <header id="contact-hero"
+    class="page-header-banner">
+    <div class="page-header-banner-container">
+      <img
+        src="../img/classes/bodyattack-q319-lesmills-fia-webassets_cf-dt-ba.jpg"
+        alt=""
+        class="page-header-banner-bg-image">
+      <div
+        class="page-header-banner-content-heading">
+        <h1>Contact Us</h1>
+        <p>Whether you have a question about
+          membership, need help with your
+          workout routine, our team is always
+          happy to chat and offer guidance.</p>
       </div>
-    </section>
+    </div>
+  </header>
+  <main id="contact">
     <section id="contact-content">
       <div class="container">
         <div class="grid-2col">
@@ -224,7 +224,7 @@
                   <input type="checkbox"
                     name="agree-privacy-checkbox"
                     id="agree-privacy-checkbox"
-                    role="checkbox" required>
+                    required>
                 </div>
                 <div>
                   <label
@@ -242,7 +242,7 @@
                   <input type="checkbox"
                     name="consent-marketing"
                     id="consent-marketing"
-                    role="checkbox" required>
+                    required>
                 </div>
                 <div>
                   <label for="consent-marketing"
