--- a/html/contact.html
+++ b/html/contact.html
@@ -269,7 +269,7 @@
                 Brisbane
                 QLD 4000</li>
               <li class="phone"><a
-                  href="0726660000">(07)
+                  href="tel:0726660000">(07)
                   2666 0000</a></li>
             </ul>
             <div class="button-group">
