increase search top

--- a/html/clubs.html
+++ b/html/clubs.html
@@ -28,8 +28,7 @@
           Clubs
         </h1>
         <form id="club-search">
-          <label for="search-club">Search Club
-            Location</label>
+          <label for="search-club">Search</label>
           <input type="text" name="search-club"
             id="search-club"
             placeholder="enter postcode or suburb">
