minor change form style

--- a/html/contact.html
+++ b/html/contact.html
@@ -226,10 +226,10 @@
                     id="agree-privacy-checkbox"
                     required>
                 </div>
-                <div>
+                <div class="checkboxlabel-group">
                   <label
                     for="agree-privacy-checkbox"
-                    class="checkbox-text">I
+                    class="checkbox-text required">I
                     have read and agreed to the
                     privacy policy.</label>
                   <div class="form-field-error"
@@ -244,9 +244,9 @@
                     id="consent-marketing"
                     required>
                 </div>
-                <div>
+                <div class="checkboxlabel-group">
                   <label for="consent-marketing"
-                    class="checkbox-text">I
+                    class="checkbox-text required">I
                     consent that ML Strength may
                     contact me via email, SMS or
                     telephone for marketing
