add circle-check to success

--- a/html/contact.html
+++ b/html/contact.html
@@ -56,7 +56,7 @@
                   <select name="club-location"
                     id="clublocation" required>
                     <option value="" selected>
-                      --Selection Your Club
+                      --Select Your Club
                       Location--
                     </option>
                     <option value="brisbane-city">
