--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <div class="flex-center"> <a
             href="html/classes.html"
-            class="btn btn-main">
+            class="btn btn-main arrow-right">
             All Classes
           </a></div>
       </div>
