--- a/html/clubs.html
+++ b/html/clubs.html
@@ -36,16 +36,24 @@
             class="btn btn-submit search"></button>
         </form>
         <div class="viewBtnGroup">
-          <a href="#locationList"
+          <!-- <a href="#locationList"
             class="btn btn-main">
             <div class="clubLinks"
               id="defaultOpen">List View</div>
+          </a> -->
+          <a href="#locationList"
+            class="btn btn-main">
+            List View
           </a>
-          <a href="#all-clubs-map"
+          <!-- <a href="#all-clubs-map"
             class="btn btn-main">
             <div class="clubLinks">
               Map
               View</div>
+          </a> -->
+          <a href="#all-clubs-map"
+            class="btn btn-main">
+            Map View
           </a>
         </div>
       </div>
