minor fix form validation

--- a/html/contact.html
+++ b/html/contact.html
@@ -44,7 +44,7 @@
             <form id="contact-form"
               class="contact-form" novalidate>
               <div
-                class="form-control club-location">
+                class="form-control club-location required-after">
                 <label for="clublocation"
                   class="required">Club
                   Location</label>
@@ -78,7 +78,7 @@
                   aria-live="polite"></div>
               </div>
               <div
-                class="form-control first-name">
+                class="form-control first-name required-after">
                 <label for="firstname"
                   class="required">First
                   Name</label>
@@ -96,7 +96,8 @@
                 <div class="form-field-error"
                   aria-live="polite"></div>
               </div>
-              <div class="form-control last-name">
+              <div
+                class="form-control last-name required-after">
                 <label for="lastname"
                   class="required">Last
                   Name</label>
@@ -115,7 +116,7 @@
                   aria-live="polite"></div>
               </div>
               <div
-                class="form-control phone-number">
+                class="form-control phone-number required-after">
                 <label for="phonenumber"
                   class="required">Phone
                   Number</label>
@@ -137,7 +138,7 @@
                   aria-live="polite"></div>
               </div>
               <div
-                class="form-control emailaddress">
+                class="form-control emailaddress required-after">
                 <label for="emailaddress"
                   class="required">Email
                   Address</label>
@@ -155,7 +156,7 @@
                   aria-live="polite"></div>
               </div>
               <div
-                class="form-control enquiry-type">
+                class="form-control enquiry-type required-after">
                 <label for="enquirytype"
                   class="required">Enquiry
                   Type</label>
@@ -202,7 +203,8 @@
                 <div class="form-field-error"
                   aria-live="polite"></div>
               </div>
-              <div class="form-control message">
+              <div
+                class="form-control message required-after">
                 <label for="message"
                   class="required">Message</label>
                 <div class="ff-wrapper">
