email and phone valuMissing validation

--- a/html/contact.html
+++ b/html/contact.html
@@ -149,7 +149,7 @@
                     name="emailaddress"
                     id="emailaddress"
                     placeholder="Email Address"
-                    required minlength="8">
+                    required>
                 </div>
                 <span class="valid-icon"></span>
                 <div class="form-field-error"
